# CNShell

./: .gitattributes  .gitignore  CHANGELOG.md  PLAN.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
.github/ISSUE_TEMPLATE/: beta_report.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: beta-release.yml  ci.yml  release.yml  windows-package.yml
docs/: ACCEPTANCE.md  ARCHITECTURE.md  BETA_TESTING.md  COMPETITIVE_ROADMAP.md  EXTERNAL_ACCEPTANCE.md  INSTALLATION.md  MCP_DEVELOPMENT_PLAN.md  NEXT_DEVELOPMENT_PLAN.md  PLUGIN_SDK.md  PRIVACY.md  RDP_TECHNICAL_EVALUATION.md  RELEASE.md  SECURITY.md  SHORTCUTS.md  TEAM_RELAY.md  TEAM_RELAY_OPERATIONS.md  TEAM_SECURITY.md  THIRD_PARTY_NOTICES.md  TROUBLESHOOTING.md  UPDATER_KEY_MANAGEMENT.md  USER_GUIDE.md  WINDOWS_DEVELOPMENT_PLAN.md
electron/: auditLogStore.ts  cloudSyncService.ts  credentialStore.ts  errorReportStore.ts  ipcValidation.test.ts  ipcValidation.ts  knownHostsStore.ts  main.ts  metricsService.ts  preload.ts  sessionLogStore.ts  sessionTypes.ts  sftpService.ts  sshConnectionConfig.ts  terminalSessionManager.ts  tsconfig.json  tunnelManager.ts  updateService.ts  workspaceStore.ts
scripts/: build-desktop.mjs  build-freerdp-sidecar.ps1  build-freerdp-sidecar.sh  build-kermit-sidecar.ps1  build-kermit-sidecar.sh  build-mcp-sidecar.ps1  build-mcp-sidecar.sh  build-mosh-sidecar.ps1  build-mosh-sidecar.sh  build-preload.cjs  build-sidecar.mjs  external-acceptance-preflight.sh  generate-ipc-types.mjs  generate-updater-manifest.mjs  password-ssh-server.py  protocol-test.sh  pty-fixture-test.sh  release.sh  sign-macos-binary.sh  soak-test.sh  test-mosh-windows.ps1  test-windows-installer.ps1  verify-windows-pe.ps1
scripts/kermit-windows/: CMakeLists.txt  gkermit-windows-compat.h  gkermit-windows-io.c  gkermit-windows-main.c
scripts/mosh-windows/: CMakeLists.txt  crypto-windows.cc  locale-utils-windows.cc  mosh-client-windows.cc  mosh-windows-compat.cc  mosh-windows-compat.h  network-windows.cc  terminaldisplayinit-windows.cc
scripts/mosh-windows/include/: config.h  err.h  mosh-windows-prefix.h  netdb.h  pty_compat.h  pwd.h  select.h  termios.h  unistd.h  version.h
scripts/mosh-windows/include/netinet/: in.h
scripts/mosh-windows/include/sys/: ioctl.h  resource.h  socket.h  time.h
scripts/patches/: freerdp-sdl-state-marker.patch  freerdp-sdl-user-close.patch
services/team-relay/: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.example.yml  docker-compose.production.yml
services/team-relay/migrations/: 0001_relay.sql  0002_email_verification.sql
services/team-relay/production/: THIRD_PARTY.md  alertmanager.example.yml  nginx.conf  prometheus.yml  relay-alerts.yml  relay.conf.template
services/team-relay/scripts/: backup.sh  container-test.sh  ops-test.sh  production-config-test.sh  restore.sh  verify-age-release.sh
services/team-relay/src/: email.rs  error.rs  lib.rs  main.rs  metrics.rs  models.rs  store.rs  terminal.rs
services/team-relay/tests/: relay_flow.rs
src/: App.tsx  advanced.css  main.tsx  mcp.css  platform.css  roadmap.css  styles.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.beta.json  tauri.conf.json  tauri.macos.conf.json  tauri.release.example.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql  0002_advanced.sql  0003_last_connected.sql  0004_terminal_environment.sql  0005_ssh_certificate.sql  0006_team_rbac.sql  0007_team_devices.sql  0008_team_relay.sql  0009_mcp.sql  0010_mcp_client_privacy.sql  0011_mcp_approval_rules.sql  0012_mcp_sidecar_secret.sql  0013_mcp_rule_policy_hardening.sql
src-tauri/resources/kermit/: THIRD_PARTY_NOTICES.md
src-tauri/resources/licenses/: rmcp-Apache-2.0.txt  serialport-MPL-2.0.txt
src-tauri/resources/mosh/licenses/: THIRD_PARTY_NOTICES.md
src-tauri/src/: ai.rs  automation.rs  backup.rs  batch.rs  bookmark.rs  certificate.rs  collaboration.rs  commands.rs  db.rs  diagnostics.rs  error.rs  external_edit.rs  kermit.rs  lib.rs  local_shell.rs  main.rs  mcp.rs  mcp_protocol.rs  models.rs  monitor.rs  mosh.rs  openssh.rs  platform.rs  plugin.rs  protocols.rs  python_automation.rs  rdp.rs  serial.rs  session_log.rs  sftp.rs  ssh.rs  task.rs  team.rs  team_relay.rs  team_relay_terminal.rs  team_share.rs  telnet.rs  touch_id.rs  tunnel.rs  updater_verify.rs  (+4 more)
src-tauri/windows/: installer-hooks.nsh
src/components/: ErrorToast.test.tsx  ErrorToast.tsx  IconButton.tsx  Modal.tsx
src/domain/: appState.test.ts  appState.ts  models.ts  seed.ts  storage.test.ts  storage.ts
src/features/connections/: ConnectionDiagnostics.tsx  ConnectionEditor.css  ConnectionEditor.test.tsx  ConnectionEditor.tsx  ConnectionFolderTree.test.tsx  ConnectionFolderTree.tsx  ConnectionSidebar.tsx  TunnelManager.tsx
src/features/files/: FileManager.test.ts  FileManager.tsx  FileManagerState.test.tsx  RemoteCodeEditor.tsx  RemoteDirectoryTree.test.tsx  RemoteDirectoryTree.tsx  TextEditor.css  TextEditor.test.tsx  TextEditor.tsx  TransferQueue.test.ts  TransferQueue.tsx  external-application.ts  native-file-drop.test.ts  (+1 more)
src/lib/: api.ts  async-timeout.test.ts  async-timeout.ts  automation-recorder.test.ts  automation-recorder.ts  background-task.test.ts  background-task.ts  format.test.ts  format.ts  layout.test.ts  layout.ts  local-path.test.ts  local-path.ts  platform.test.ts  platform.ts  runtime-metrics.ts  system-theme.ts  terminal-input.test.ts  terminal-input.ts  workspace-persistence.test.ts  workspace-persistence.ts  workspace-runtime.test.ts  workspace-runtime.ts
src/shared/: ipc.ts
src/store/: app-store.test.ts  app-store.ts
src/test/: deliverables.test.ts  external-acceptance-preflight.test.ts  release-script.test.ts  setup.ts  tauri-config.test.ts  theme.test.ts  updater-manifest.test.ts
src/ui/: App.components.test.tsx  App.tsx  terminalTheme.ts
tests/e2e/: app.spec.ts
updates/beta/: latest.json
(+81 files in other folders)
