[package]
name = "cnshell"
version = "0.1.1"
description = "A native macOS SSH, SFTP and server monitoring workspace"
authors = ["CNshell Contributors"]
edition = "2024"

[lib]
name = "cnshell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
keyring = { version = "3", features = ["apple-native"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono", "uuid"] }
directories = "6"
base64 = "0.22"
sha2 = "0.10"
async-trait = "0.1"
futures-util = "0.3"
which = "8"
parking_lot = "0.12"
socket2 = { version = "0.6", features = ["all"] }
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
regex = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSData", "NSError", "NSString", "NSURL"] }

[dev-dependencies]
tempfile = "3"
