[package]
name = "cnshell"
version = "0.1.1"
description = "A native SSH, SFTP and server monitoring workspace for macOS and Windows"
authors = ["CNshell Contributors"]
edition = "2024"

[lib]
name = "cnshell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono", "uuid"] }
directories = "6"
base64 = "0.22"
minisign-verify = "=0.2.5"
sha2 = "0.10"
ed25519-dalek = "=2.2.0"
hkdf = "=0.12.4"
serde_jcs = "=0.2.0"
wasmi = { version = "=1.1.0", features = ["extra-checks"] }
x25519-dalek = { version = "=2.0.1", features = ["static_secrets"] }
async-trait = "0.1"
futures-util = "0.3"
which = "8"
parking_lot = "0.12"
socket2 = { version = "0.6", features = ["all"] }
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
regex = "1"
cron = "0.15"
rustpython-parser = "0.4.0"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "stream"] }
tempfile = "3"
zmodem2 = "0.7.1"
portable-pty = "0.9"
serialport = "4.9.0"
zeroize = "1"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = ["std", "libc", "NSRunningApplication"] }
objc2-foundation = { version = "0.3", features = ["NSData", "NSError", "NSString", "NSURL"] }
objc2-local-authentication = "0.3.2"
security-framework = { version = "3.7", features = ["OSX_10_15"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_JobObjects",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
axum = "0.8"
cnshell-team-relay = { path = "../services/team-relay" }
wat = "=1.253.0"

[patch.crates-io]
ssh2 = { path = "vendor/ssh2" }
