[package]
name = "cnshell-team-relay"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
argon2 = "0.5"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = "=2.2.0"
futures-util = "0.3"
lettre = { version = "0.11", default-features = false, features = ["builder", "hostname", "pool", "smtp-transport", "tokio1-rustls-tls"] }
parking_lot = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_jcs = "=0.2.0"
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono", "uuid"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["limit", "request-id", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
tempfile = "3"
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
